add module month package

--- a/offline-month-business/pom.xml
+++ b/offline-month-business/pom.xml
@@ -124,17 +124,18 @@
                         <!--<descriptor>src/assembly/assembly.xml</descriptor>-->
                     <!--</descriptors>-->
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>assembly</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>make-assembly</id>-->
+                        <!--<phase>package</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>assembly</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
             </plugin>
 
         </plugins>
     </build>
+
 </project>
