--- a/month-package/pom.xml
+++ b/month-package/pom.xml
@@ -24,9 +24,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
+                    <!--<descriptorRefs>-->
+                        <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
+                    <!--</descriptorRefs>-->
 
                     <descriptors>
                         <descriptor>src/assembly/assembly.xml</descriptor>
@@ -80,6 +80,7 @@
                                         <delete dir="${project.basedir}/src/main/resources/">
                                            <include name="*"/>
                                         </delete>
+                                        
                                     </tasks>
                                 </configuration>
 
