--- a/offline-month-business/src/main/resources/month_business.conf
+++ b/offline-month-business/src/main/resources/month_business.conf
@@ -1,4 +1,3 @@
 offline.month.input.path.often.hdfs.path=/app/base/tracker
-offline.month.input.path.often.from=2016-11-30
-
-offline.month.input.path.often.end=2016-12-03
+offline.month.input.path.often.from=
+offline.month.input.path.often.size=4
