--- a/offline-base-data/pom.xml
+++ b/offline-base-data/pom.xml
@@ -117,9 +117,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
+                    <!--<descriptorRefs>-->
+                        <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
+                    <!--</descriptorRefs>-->
                     <!--<archive>-->
                         <!--<manifest>-->
                             <!--<mainClass>com.ehl.offline.base.EhlBaseDataProcesser</mainClass>-->
