modify script of es_index.sh

--- a/offline-core/pom.xml
+++ b/offline-core/pom.xml
@@ -30,8 +30,18 @@
             <artifactId>spark-sql_${scala.minor.version}</artifactId>
         </dependency>
 
+        <!-- metrics -->
 
-
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-servlets</artifactId>
+            <version>3.1.2</version>
+        </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
