--- a/driver-vehicle-association/test/pom.xml
+++ b/driver-vehicle-association/test/pom.xml
@@ -3,16 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>ehl-offline</artifactId>
+        <artifactId>driver-vehicle-association</artifactId>
         <groupId>com.ehl.offline</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <modules>
-        <module>test</module>
-    </modules>
-    <artifactId>driver-vehicle-association</artifactId>
 
+    <artifactId>test</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
