--- a/offline-export/path-es/pom.xml
+++ b/offline-export/path-es/pom.xml
@@ -126,32 +126,32 @@
                 </configuration>
 
             </plugin>
-            <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <configuration>
-                <descriptorRefs>
-                    <descriptorRef>jar-with-dependencies</descriptorRef>
-                </descriptorRefs>
-                <archive>
-                    <manifest>
-                        <mainClass>com.ehl.offline.export.PathOfOftenExport2ES</mainClass>
-                    </manifest>
-                </archive>
+            <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-assembly-plugin</artifactId>-->
+            <!--<configuration>-->
+                <!--<descriptorRefs>-->
+                    <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
+                <!--</descriptorRefs>-->
+                <!--<archive>-->
+                    <!--<manifest>-->
+                        <!--<mainClass>com.ehl.offline.export.PathOfOftenExport2ES</mainClass>-->
+                    <!--</manifest>-->
+                <!--</archive>-->
                 <!--<descriptors>-->
                 <!--<descriptor>src/assembly/assembly.xml</descriptor>-->
                 <!--</descriptors>-->
-            </configuration>
-            <executions>
-                <execution>
-                    <id>make-assembly</id>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>assembly</goal>
-                    </goals>
-                </execution>
-            </executions>
-            </plugin>
+            <!--</configuration>-->
+            <!--<executions>-->
+                <!--<execution>-->
+                    <!--<id>make-assembly</id>-->
+                    <!--<phase>package</phase>-->
+                    <!--<goals>-->
+                        <!--<goal>assembly</goal>-->
+                    <!--</goals>-->
+                <!--</execution>-->
+            <!--</executions>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 </project>
