--- a/offline-month-business/pom.xml
+++ b/offline-month-business/pom.xml
@@ -112,9 +112,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
+                    <!--<descriptorRefs>-->
+                        <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
+                    <!--</descriptorRefs>-->
                     <archive>
                     <manifest>
                     <mainClass>com.ehl.offline.month.EhlPathOfOftenBusinessSpark</mainClass>
