add tracker function ,then modify construction of the project

--- a/offline-base-data/src/main/resources/base.conf
+++ b/offline-base-data/src/main/resources/base.conf
@@ -7,7 +7,36 @@ base.filter.card.2=00000000
 base.file.suffix=.writed
 
 
-
 ##file content config
-##暂时没用到下面配置
+
 base.file.content.split=
+
+
+
+  ######
+time.strategy.default=constant
+#路线时间过滤规则1
+#默认30分钟  constant,avg空时的默认值
+time.strategy.time.default=1800
+time.strategy.avg.before.day=1
+time.strategy.avg.input=/app/base/history_time/{0}
+
+##路线时间过滤规则2,根据历史计算平均时间  avg
+
+##卡点之间通过时间不能超过1小时
+##线路
+#time.strategy.default=avg
+
+
+#time.strategy.avg.max.time=3600
+time.avg.input.path=/app/base/bay_pair
+time.avg.input.from=
+time.avg.input.size=240
+
+time.avg.downfloor=0.03
+time.avg.upfloor=0.10
+
+##默认一小时
+time.max.time=3600
+time.min.time=3
+
