--- a/driver-vehicle-association/mobilefile-2-hdfs/pom.xml
+++ b/driver-vehicle-association/mobilefile-2-hdfs/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <artifactId>ehl-offline</artifactId>
+        <artifactId>driver-vehicle-association</artifactId>
         <groupId>com.ehl.offline</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>offline-base-data</artifactId>
+    <artifactId>mobilefile-2-hdfs</artifactId>
     <name>${project.artifactId}</name>
     <description>My wonderfull scala app</description>
-    <inceptionYear>2015</inceptionYear>
+    <inceptionYear>2010</inceptionYear>
     <licenses>
         <license>
             <name>My License</name>
@@ -19,39 +19,16 @@
     </licenses>
 
     <dependencies>
-
-        <dependency>
-            <groupId>com.ehl.offline</groupId>
-            <artifactId>offline-core</artifactId>
-            <version>${version}</version>
-        </dependency>
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.apache.hadoop</groupId>-->
-            <!--<artifactId>hadoop-hdfs</artifactId>-->
-            <!--<version>2.6.0</version>-->
-        <!--</dependency>-->
-        <!-- spark -->
-
         <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_${scala.minor.version}</artifactId>
-            <!--<version>1.6.2</version>-->
+            <groupId>com.ehl.offline</groupId>
+            <artifactId>offline-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_${scala.minor.version}</artifactId>
-            <!--<version>1.6.2</version>-->
-        </dependency>
-
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
@@ -61,16 +38,67 @@
         </dependency>
         <dependency>
             <groupId>org.specs2</groupId>
-            <artifactId>specs2-core_${scala.compat.version}</artifactId>
-            <version>2.4.16</version>
+            <artifactId>specs2_${scala.tools.version}</artifactId>
+            <version>1.13</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_${scala.compat.version}</artifactId>
-            <version>2.2.4</version>
+            <artifactId>scalatest_${scala.tools.version}</artifactId>
+            <version>2.0.M6-SNAP8</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-hdfs</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-client-jobclient</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-client-core</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>14.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-minicluster</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <!-- sender -->
+
+        <!--<dependency>-->
+            <!--<groupId>tv.icntv.sender</groupId>-->
+            <!--<artifactId>hdfs</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+            <!--<exclusions>-->
+                <!--<exclusion>-->
+                    <!--<artifactId>jets3t</artifactId>-->
+                    <!--<groupId>net.java.dev.jets3t</groupId>-->
+                <!--</exclusion>-->
+                <!--<exclusion>-->
+                    <!--<artifactId>jsr305</artifactId>-->
+                    <!--<groupId>com.google.code.findbugs</groupId>-->
+                <!--</exclusion>-->
+                <!--<exclusion>-->
+                    <!--<artifactId>hadoop-hdfs</artifactId>-->
+                    <!--<groupId>org.apache.hadoop</groupId>-->
+                <!--</exclusion>-->
+            <!--</exclusions>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
@@ -81,7 +109,7 @@
                 <!-- see http://davidb.github.com/scala-maven-plugin -->
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.1.3</version>
                 <executions>
                     <execution>
                         <goals>
@@ -90,6 +118,7 @@
                         </goals>
                         <configuration>
                             <args>
+                                <arg>-make:transitive</arg>
                                 <arg>-dependencyfile</arg>
                                 <arg>${project.build.directory}/.scala_dependencies</arg>
                             </args>
@@ -100,7 +129,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.13</version>
                 <configuration>
                     <useFile>false</useFile>
                     <disableXmlReport>true</disableXmlReport>
@@ -112,21 +141,20 @@
                     </includes>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <!--<descriptorRefs>-->
-                    <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
+                        <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
                     <!--</descriptorRefs>-->
                     <!--<archive>-->
-                    <!--<manifest>-->
-                    <!--<mainClass>com.ehl.offline.base.EhlBaseDataProcesser</mainClass>-->
-                    <!--</manifest>-->
+                        <!--<manifest>-->
+                            <!--<mainClass>com.ehl.offline.FileUnionAction</mainClass>-->
+                        <!--</manifest>-->
                     <!--</archive>-->
                     <descriptors>
-                        <descriptor>src/assembly/assembly.xml</descriptor>
+                    <descriptor>src/assembly/assembly.xml</descriptor>
                     </descriptors>
                 </configuration>
                 <executions>
@@ -139,7 +167,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
 </project>
