--- a/driver-vehicle-association/pom.xml
+++ b/driver-vehicle-association/pom.xml
@@ -11,8 +11,17 @@
     <packaging>pom</packaging>
     <modules>
 
+        <module>mobile-processor</module>
+        <module>mobilefile-2-hdfs</module>
+        <module>save-2-oracle</module>
     </modules>
     <artifactId>driver-vehicle-association</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+    </dependencies>
 </project>
