--- a/driver-vehicle-association/mobile-processor/src/main/resources/data.conf
+++ b/driver-vehicle-association/mobile-processor/src/main/resources/data.conf
@@ -10,6 +10,15 @@ tracker.hdfs.path=/app/pathOfOften/{0}
 tracker.greater.than.polt.length=2
 tracker.filter=0.3
 
+
+####过车数据
+v.hdfs.path=/tvc
+v.hdfs.from=
+v.hdfs.size=30
+
+##单位s  3分钟  =180
+mobile.time.between.float=180
+
 #tracker.fields=numb_plateType,cids,times
 
 
