--- a/driver-vehicle-association/pom.xml
+++ b/driver-vehicle-association/pom.xml
@@ -14,6 +14,7 @@
         <module>mobile-processor</module>
         <module>mobilefile-2-hdfs</module>
         <module>save-2-oracle</module>
+        <module>mobile-data-save</module>
     </modules>
     <artifactId>driver-vehicle-association</artifactId>
 
