--- a/driver-vehicle-association/mobile-data-save/pom.xml
+++ b/driver-vehicle-association/mobile-data-save/pom.xml
@@ -106,18 +106,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <descriptorRefs>
-                    <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <archive>
-                    <manifest>
-                    <!--<mainClass>com.ehl.mobile.processor.OracleSpark</mainClass>-->
-                    <mainClass>com.ehl.mobile.hbase.Mobile2HbaseSpark</mainClass>
-                    </manifest>
-                    </archive>
-                    <!--<descriptors>-->
-                        <!--<descriptor>src/assembly/assembly.xml</descriptor>-->
-                    <!--</descriptors>-->
+                    <!--<descriptorRefs>-->
+                    <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
+                    <!--</descriptorRefs>-->
+                    <!--<archive>-->
+                    <!--<manifest>-->
+                    <!--&lt;!&ndash;<mainClass>com.ehl.mobile.processor.OracleSpark</mainClass>&ndash;&gt;-->
+                    <!--<mainClass>com.ehl.mobile.hbase.Mobile2HbaseSpark</mainClass>-->
+                    <!--</manifest>-->
+                    <!--</archive>-->
+                    <descriptors>
+                        <descriptor>src/assembly/assembly.xml</descriptor>
+                    </descriptors>
                 </configuration>
                 <executions>
                     <execution>
