--- a/driver-vehicle-association/phoenix-sql/pom.xml
+++ b/driver-vehicle-association/phoenix-sql/pom.xml
@@ -6,7 +6,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>save-2-oracle</artifactId>
+    <artifactId>phoenix-sql</artifactId>
     <name>${project.artifactId}</name>
     <description>My wonderfull scala app</description>
     <inceptionYear>2010</inceptionYear>
@@ -19,18 +19,7 @@
     </licenses>
 
 
-
     <dependencies>
-        <dependency>
-        <groupId>joda-time</groupId>
-        <artifactId>joda-time</artifactId>
-    </dependency>
-
-    <dependency>
-        <groupId>com.oracle</groupId>
-        <artifactId>ojdbc6</artifactId>
-        <version>11.2.0</version>
-    </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
@@ -40,6 +29,11 @@
             <groupId>com.ehl.offline</groupId>
             <artifactId>offline-core</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.phoenix</groupId>
+            <artifactId>phoenix-core</artifactId>
+            <version>4.9.0-HBase-1.1</version>
         </dependency>
         <!-- Test -->
         <dependency>
@@ -63,8 +57,8 @@
     </dependencies>
 
     <build>
-        <sourceDirectory>src/main/scala</sourceDirectory>
-        <testSourceDirectory>src/test/scala</testSourceDirectory>
+        <!--<sourceDirectory>src/main/scala</sourceDirectory>-->
+        <!--<testSourceDirectory>src/test/scala</testSourceDirectory>-->
         <plugins>
             <plugin>
                 <!-- see http://davidb.github.com/scala-maven-plugin -->
@@ -101,33 +95,6 @@
                         <include>**/*Suite.*</include>
                     </includes>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <archive>
-                        <manifest>
-                            <!--<mainClass>com.ehl.mobile.processor.OracleSpark</mainClass>-->
-                            <mainClass>com.ehl.data.oracle.SaveOracleWithSpark</mainClass>
-                        </manifest>
-                    </archive>
-                    <!--<descriptors>-->
-                    <!--<descriptor>src/assembly/assembly.xml</descriptor>-->
-                    <!--</descriptors>-->
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>assembly</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
