--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -10,19 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
-
-        <module>mobile-processor</module>
-        <module>mobilefile-2-hdfs</module>
-        <module>mobile-data-save</module>
-        <module>phoenix-sql</module>
+        <module>kettle-web</module>
     </modules>
-    <artifactId>driver-vehicle-association</artifactId>
+    <artifactId>tools</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>2.8.2</version>
-        </dependency>
-    </dependencies>
+
 </project>
