--- a/driver-vehicle-association/mobile-processor/src/main/resources/mv.conf
+++ b/driver-vehicle-association/mobile-processor/src/main/resources/mv.conf
@@ -15,7 +15,7 @@ month.partition.size=10
 mobile.time.between.float=120
 
 ##ass
-result.hdfs.path=/app/association/result/{0}
+#result.hdfs.path=/app/association/result/{0}
 
 
 
