modify delete table

--- a/driver-vehicle-association/mobilefile-2-hdfs/src/main/resources/base.conf
+++ b/driver-vehicle-association/mobilefile-2-hdfs/src/main/resources/base.conf
@@ -1,5 +1,5 @@
 ftp.directory.path=E:\\ehl\\文档\\易华录重新整理工作\\山东菏泽\\data-mobile-01-21
 ftp.back.directory.name=back
-
+#51.3  data1/ftp
 ##hdfs path
 mobile.hdfs.path=hdfs://cluster1/app/mobile/
